--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   display:table-cell;
 }
 #preview {
-  width: 100%;
-  height: 100%;
+  width: 300px;
+  height: 300px;
   position: absolute;
   top: 0px;
   left: 0px;
@@ -29,6 +29,7 @@
   white-space: pre-wrap;
 }
   </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/native-promise-only/0.8.1/npo.js" integrity="sha256-o/UXdF4sFrbgV5UCIWF5ca7VMLDdplhzA4knJ4nFsc0=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.4/fetch.min.js" integrity="sha256-eOUokb/RjDw7kS+vDwbatNrLN8BIvvEhlLM5yogcDIo=" crossorigin="anonymous"></script>
   <script>
 (function () {
